--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "version": "0.1.0",
   "author": "Kamran Ali <kamranalinitb@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.13.67",
-    "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-offline": "^2.2.6",
-    "gatsby-theme-blog-starter": "^0.0.5",
+    "gatsby": "^2.13.77",
+    "gatsby-plugin-csp": "^1.1.3",
+    "gatsby-plugin-manifest": "^2.2.8",
+    "gatsby-plugin-offline": "^2.2.9",
+    "gatsby-theme-blog-starter": "^0.0.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
